--- a/comps/UnderCategory/under.css
+++ b/comps/UnderCategory/under.css
@@ -15,22 +15,27 @@
     color: color;
 }
 
+.UnderCategory-Box-Inner {
+    margin-top: 50px;
+}
+
 .Under-Divider {
     position: relative;
     width: 520px;
     height: 2px;
     background-color: #F4F4F4;
-    margin:30px;
+    margin:20px;
 }
 
 .Note {
-    display: flex;align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .Note-Date {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 200px;
     margin-left: 30px;
 }
 
@@ -39,13 +44,13 @@
     justify-content: center;
     color: #0B0C0C;
     font-weight: bold;
-    font-size: 38px;
+    font-size: 32px;
 }
 
 .Date-Created {
     display: flex;
     justify-content: center;
-    font-size: 22px;
+    font-size: 18px;
 
 }
 
