--- a/pages/RightPage/rightpage.css
+++ b/pages/RightPage/rightpage.css
@@ -15,7 +15,8 @@
     position: relative;
     display: flex;
     justify-content: flex-end;
-    margin: 100px;
+    margin-top: 100px;
+    margin-right: 0px;
 }
 
 .text h2 {
