create user from front end

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,9 +29,9 @@
 
             <!-- Login Form -->
             <!-- change type = "" to match in css -->
-            <form method="" action="home">
-                <input type="text" id="login" class="fadeIn second" name="login" placeholder="Email" required>
-                <input type="text" id="password" class="fadeIn third" name="login" placeholder="Password" required>
+            <form method="POST" action="login">
+                <input type="text" id="email" class="fadeIn second" name="email" placeholder="Email" required>
+                <input type="text" id="password" class="fadeIn third" name="password" placeholder="Password" required>
                 <input type="submit" class="fadeIn fourth" value="Log In">
             </form>
 
