--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -25,11 +25,11 @@
 
             <!-- Login Form -->
             <!-- change type = "" to match in css -->
-            <form method="" action="home">
-                <input type="text" id="login" class="fadeIn second" name="login" placeholder="Name" required>
-                <input type="text" id="login" class="fadeIn second" name="login" placeholder="Email" required>
-                <input type="text" id="password" class="fadeIn third" name="login" placeholder="Password" required>
-                <input type="text" id="login" class="fadeIn second" name="login" placeholder="Confirm Password" required>
+            <form method="post" action="signup">
+                <input type="text" id="name" class="fadeIn second" name="name" placeholder="Name" required>
+                <input type="email" id="email" class="fadeIn second" name="email" placeholder="Email" required>
+                <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password" required>
+                <input type="password" id="confirmPassword" class="fadeIn third" name="confirmPassword" placeholder="Confirm Password" required>
                 <input type="submit" class="fadeIn fourth" value="Sign Up">
             </form>
 
