--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,11 +22,10 @@
             <!-- Icon -->
             <div class="fadeIn first">
                 <h1>Welcome to WonderNote</h1>
-                <p>"Logo"</p>
+                <img class= "logo" src="/styles/images/WonderNote-Logo V2.png" alt="Logo" height="200" width="200">
                 <br>
                 <br>
-                <br>                
-                <br>
+
             </div>
 
             <!-- Login Form -->
