--- a/views/leftMenu.ejs
+++ b/views/leftMenu.ejs
@@ -6,7 +6,7 @@
         </div>
 
         <div class="header">
-            <h1><%=name%></h1>
+            <h1>User1</h1>
         </div>
 
     </div>
@@ -49,12 +49,12 @@
             </div>
         </div>
 
-        <div class="Category-Expanded">
+        <!-- <div class="Category-Expanded">
             <div class="Category-Above">
                 <div class="Category-Box">
-                    <div class="Category-Box-Inner">
+                    <div class="Category-Box-Inner"> -->
                         <!-- To-do's -->
-                        <div class="Note text">
+                        <!-- <div class="Note text">
                             <div class="Note-Date">
                                 <div class="Note-Title">
                                     Note Title
@@ -68,7 +68,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- <div class="Under-Category"> -->
             <!-- <UnderCategory /> -->
             <!-- <%- include('components/notes')%> -->
@@ -81,7 +81,7 @@
 
             <!-- </div> -->
             <!-- </div> -->
-        </div>
+        <!-- </div> -->
     </div>
     <div class="Fav-Del">
         <!-- <Favorite /> -->
