--- a/views/app.ejs
+++ b/views/app.ejs
@@ -23,5 +23,9 @@
         <%- include('rightPage'); %>
     </div>
 
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <link class="jsbin" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script class="jsbin" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.0/jquery-ui.min.js"></script>
 </body>
 </html>
