--- a/views/rightPage.ejs
+++ b/views/rightPage.ejs
@@ -80,18 +80,18 @@
     }
 
     // add file
-    function readURL(input) {
-        if (input.files && input.files[0]) {
-            var reader = new FileReader();
+    // function readURL(input) {
+    //     if (input.files && input.files[0]) {
+    //         var reader = new FileReader();
 
-            reader.onload = function (e) {
-                $('#file')
-                    .attr('src', e.target.result)
-                    .width(300)
-                    .height(300);
-            };
+    //         reader.onload = function (e) {
+    //             $('#file')
+    //                 .attr('src', e.target.result)
+    //                 .width(300)
+    //                 .height(300);
+    //         };
 
-            reader.readAsDataURL(input.files[0]);
-        }
-    }
+    //         reader.readAsDataURL(input.files[0]);
+    //     }
+    // }
 </script>
