--- a/views/components/add.ejs
+++ b/views/components/add.ejs
@@ -7,7 +7,7 @@
                     <img src="/styles/images/picture.png" />
                 </label>
 
-                <input id="file-input" type="file" onchange="readURL(this);" />
+                <input id="file-input" type="file" accept="image/*" onchange="readURL(this);" />
             </div>
 
         </div>
