--- a/styles/leftMenu.css
+++ b/styles/leftMenu.css
@@ -75,6 +75,13 @@
     cursor: pointer;
 }
 
+.Btn-Box:hover {
+    text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    transition: all 0.4s ease 0s;
+}
+
 .Btn-Icon {
     width: 45px;
     height: 45px;
@@ -115,11 +122,13 @@
     border: 2px #F4F4F4 solid;
     background-color: #FFFFFF;
     box-shadow: 0 0 6px #FFFFFF;
+    
 }
 
 .Searchbar-Box-Inner::selection {
     background: none;
     color: color;
+    
 }
 
 
@@ -151,3 +160,6 @@
 .search {
     border: 0;
 }
+
+
+
