--- a/views/components/add.ejs
+++ b/views/components/add.ejs
@@ -4,6 +4,7 @@
             <div class="image-upload">
               
                 <label for="file-input">
+                    <p>Add an image by clicking on the icon!</p>
                     <img src="/styles/images/picture.png" />
                 </label>
 
@@ -11,22 +12,6 @@
             </div>
 
         </div>
-        <div class="add-Divider"></div>
-        <div class="add-Fnct">
-            <!-- <img src="/styles/images/pdf.png"> -->
-            <div class="image-upload">
-              
-                <label for="file-input">
-                    <img src="/styles/images/pdf.png" />
-                </label>
-
-                <input id="file-input" type="file" onchange="readURL(this);" />
-            </div>
-
-        </div>
-        <div class="add-Divider"></div>
-        <div class="add-Fnct">
-            <img src="/styles/images/list.png">
-        </div>
+        
     </div>
 </div>
