--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    
     <link rel='stylesheet' href='/styles/login-styles.css' />
     <title>Login</title>
 </head>
@@ -21,8 +20,8 @@
 
             <!-- Icon -->
             <div class="fadeIn first">
-                <h1>Welcome to WonderNote</h1>
-                <img class= "logo" src="/styles/images/WonderNote-Logo V2.png" alt="Logo" height="200" width="200">
+                <h1>Welcome to the notes app!</h1>
+                
                 <br>
                 <br>
 
@@ -39,7 +38,8 @@
 
             <!-- Remind Passowrd -->
             <div id="formFooter">
-                <a class="underlineHover" href="signup">Not a member?</a>
+                <a class="underlineHover" href="signup">Not a member?</a> ||
+                <a class="underlineHover" href="forgotPass">Forgot Password?</a>
             </div>
 
         </div>
