--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -26,10 +26,10 @@
             <!-- Login Form -->
             <!-- change type = "" to match in css -->
             <form method="post" action="signup">
-                <input type="text" id="name" class="fadeIn second" name="name" placeholder="Name" required>
+                
                 <input type="email" id="email" class="fadeIn second" name="email" placeholder="Email" required>
-                <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password" required>
-                <input type="password" id="confirmPassword" class="fadeIn third" name="confirmPassword" placeholder="Confirm Password" required>
+                <input type="password" id="password" class="fadeIn third" name="password" placeholder="Password" minlength="6" required>
+                <input type="password" id="confirmPassword" class="fadeIn third" name="confirmPassword" placeholder="Confirm Password" minlength="6" required>
                 <input type="submit" class="fadeIn fourth" value="Sign Up">
             </form>
 
